Fix content morphing area covering more than intended

--- a/Extensions/ContentMorphingExtension/pebl-contentMorphing-widget.css
+++ b/Extensions/ContentMorphingExtension/pebl-contentMorphing-widget.css
@@ -4,6 +4,7 @@
     padding: 5px;
     border: 3px solid #077ebc;
     box-sizing: border-box;
+    clear: both;
     /*    position: relative;*/
 }
 
